# ThesisLink

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  DEV_GUIDE.md  README.md  docker-compose.yml  quickstart.ps1
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  contacts.py  dashboard.py  deps.py  documents.py  email.py  templates.py
backend/app/models/: __init__.py  activity_log.py  contact.py  document.py  template.py  user.py
backend/app/schemas/: __init__.py  activity_log.py  contact.py  document.py  template.py  user.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  file_service.py  llm_service.py  scheduler_service.py
backend/app/utils/: __init__.py  helpers.py  security.py
backend/tests/: test_auth.py
